# taskwave

./: .gitignore  README.md  docker-compose.yaml  for-client.compose.yaml  pyproject.toml
client/: .editorconfig  (+7 more)
server/: .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  backend-docker-compose.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements_my.txt
server/db/: Dockerfile  init.sql
server/migrations/: env.py
server/migrations/versions/: 2024_01_18_1254-23bb45ad17c3_check.py  2024_01_18_1304-d24e5311e6c1_check.py  2024_03_14_1135-fe546de643f7_modify_user_model.py  2024_03_27_1436-4d42bbee8ebf_test.py  2024_03_27_1621-9b46a784e8d8_null.py  2024_04_02_1902-2f5b637e8dd4_rename.py  2024_04_16_1516-dbcc1976bd62_email_verivication.py  2024_04_16_2004-a1c99312a5d2_ohhh.py  2024_04_18_1711-35cf48d6b722_add_column_deadline.py  2024_04_24_1210-05bd0260615a_deadline_for_tasks_group.py
server/src/: celery_tasks.py  celeryconfig.py  config.py  database.py  exceptions.py  main.py  responses.py
server/src/auth/: dependencies.py  exceptions.py  jwt.py  responses.py  routers.py  schemas.py  service.py
server/src/database_2/: database_2.py  exceptions.py  models.py  repository.py
server/src/tasks/: dependencies.py  exceptions.py  models.py  responses.py  routers.py  schemas.py  service.py
server/src/tasks_group/: dependencies.py  exceptions.py  models.py  responses.py  routers.py  schemas.py  service.py
server/tests/: conftest.py  test__auth.py  test__tasks_group.py  test__user.py  test_tasks.py  test_tasks_group.py
(+72 files in other folders)
